--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cube</title>
+    <title>Orbit</title>
     <link rel="manifest" href="manifest.json">
     <script src="js/three.min.js" defer></script>
     <script src="js/OrbitControls.js" defer></script>
@@ -17,6 +17,7 @@
         }
     </script>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="service-worker.js" defer></script>
 </head>
 <body>
 
