--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Orbit</title>
+    <title>Plane control</title>
     <link rel="manifest" href="manifest.json">
     <script src="js/three.min.js" defer></script>
-    <script src="js/OrbitControls.js" defer></script>
+    <script src="js/stats.min.js" defer></script>
     <script src="js/scripts.js" defer></script>
+    <script src="service-worker.js" defer></script>
+    <link rel="stylesheet" href="css/styles.css">
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
@@ -16,8 +18,6 @@
             })
         }
     </script>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="service-worker.js" defer></script>
 </head>
 <body>
 
