--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
     </script>
 </head>
 <body>
-    <div id="startButton">
-
-    </div>
-    <div class="tracker">
-
-    </div>
+    <h1 id="startButton">GO</h1>
+    <div class="circle fixedControls shootButton"></div>
+    <div class="circle fixedControls joyBase"></div>
+    <div class="circle joyStick"></div>
 </body>
 </html>
